@@ -169,6 +169,7 @@ Version 1.5
  - Add BeNext TagReader500 from hvbommel (Nechry)
  - Restore Z-Wave.Me ZME_05461 (Nechry)
  - Add Domux Wall Plug DX2SK-Z (Nechry)
+ - Add Yale Key Free Touchscreen Deadbolt YRD446 (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
